# asteroids

./: .gitignore  README.md  asteroid.py  circleshape.py  constants.py  game_events.jsonl  game_state.jsonl  main.py  player.py  pointscounter.py  pyproject.toml  utils.py
