[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "afkale", email = "arubioo977@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame==2.6.1",
]

[project.scripts]
asteroids = "asteroids:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
